AWS_CLI/resource/privateRouteTable.json
{"Associations": [{"SubnetId": "subnet-0276150fa2016000c", "RouteTableAssociationId": "rtbassoc-06ad0fce69e3cd665", "Main": false, "RouteTableId": "rtb-0b920d591dea102fa"}], "RouteTableId": "rtb-0b920d591dea102fa", "VpcId": "vpc-05e90a7ef710bb823", "PropagatingVgws": [], "Tags": [{"Value": "default", "Key": "Name"}], "Routes": [{"GatewayId": "local", "DestinationCidrBlock": "172.32.0.0/16", "State": "active", "Origin": "CreateRouteTable"}, {"Origin": "CreateRoute", "DestinationCidrBlock": "0.0.0 [...]
