AWS_CLI/resource/publicRouteTable.json
{"Associations": [{"SubnetId": "subnet-038e781886c663190", "RouteTableAssociationId": "rtbassoc-07670091bbe478696", "Main": false, "RouteTableId": "rtb-0cf32b7eb7508f70a"}], "RouteTableId": "rtb-0cf32b7eb7508f70a", "VpcId": "vpc-05e90a7ef710bb823", "PropagatingVgws": [], "Tags": [{"Value": "public", "Key": "Name"}], "Routes": [{"GatewayId": "local", "DestinationCidrBlock": "172.32.0.0/16", "State": "active", "Origin": "CreateRouteTable"}, {"GatewayId": "igw-0fb82e30fdceb9c07", "DestinationCidrBl [...]
